--- a/html_clark/css/font.css
+++ b/html_clark/css/font.css
@@ -1,24 +1,43 @@
 @font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/OpenSans-SemiBold.woff2') format('woff2'),
-  url('../fonts/OpenSans-SemiBold.woff') format('woff');
-  font-weight: 600;
+  font-family: 'Youth';
+  src: url('../fonts/Youth-Light.woff2') format('woff2'),
+  url('../fonts/Youth-Light.woff') format('woff');
+  font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
+
 @font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/OpenSans-Regular.woff2') format('woff2'),
-  url('../fonts/OpenSans-Regular.woff') format('woff');
+  font-family: 'Youth';
+  src: url('../fonts/Youth-Regular.woff2') format('woff2'),
+  url('../fonts/Youth-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Open Sans';
-  src: url('../fonts/OpenSans-Bold.woff2') format('woff2'),
-  url('../fonts/OpenSans-Bold.woff') format('woff');
+  font-family: 'Youth';
+  src: url('../fonts/Youth-Black.woff2') format('woff2'),
+  url('../fonts/Youth-Black.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Youth';
+  src: url('../fonts/Youth-Medium.woff2') format('woff2'),
+  url('../fonts/Youth-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Youth';
+  src: url('../fonts/Youth-Bold.woff2') format('woff2'),
+  url('../fonts/Youth-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
