--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -1452,4 +1452,48 @@ footer {
 .about {
   padding-bottom: 195px; }
 
+/**VIDEO**/
+.popup-team figure .video-block {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+  .popup-team figure .video-block .bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    z-index: 2; }
+    .popup-team figure .video-block .bg img {
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+         object-fit: cover;
+      -o-object-position: center;
+         object-position: center; }
+  .popup-team figure .video-block .icon-wrap {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    z-index: 10;
+    cursor: pointer; }
+    .popup-team figure .video-block .icon-wrap img {
+      -webkit-transition: all .4s ease;
+      transition: all .4s ease;
+      width: 40px;
+      height: auto; }
+    .popup-team figure .video-block .icon-wrap:hover img {
+      -webkit-transform: scale(1.05);
+              transform: scale(1.05); }
+  .popup-team figure .video-block video {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover; }
+
 /*# sourceMappingURL=styles.css.map */
